# hpc-stress-tester

./: CMakeLists.txt  countdown.cpp  countdown.h  eratostene.cpp  eratostene.h  hpc_matrix.h  main.cpp  matrix.cpp  matrix.h  pi.cpp  pi.h
avx/: README.md  basic_add_avx2.c  basic_maddubs_epi.c  common.h
